--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.vbb-journey-ui-journey {
+.db-journey-ui-journey {
 	margin: 0;
 	padding-left: .5em;
 	text-align: left;
@@ -7,7 +7,7 @@
 	color: #444;
 }
 
-.vbb-journey-ui-link {
+.db-journey-ui-link {
 	padding: 0 .25em;
 	display: inline-block;
 	line-height: 1.4;
@@ -15,20 +15,20 @@
 	border-radius: .2em;
 	cursor: pointer;
 }
-.vbb-journey-ui-link:hover {
+.db-journey-ui-link:hover {
 	background-color: rgba(52, 152, 219, .4);
 }
 
-.vbb-journey-ui-stopover {
+.db-journey-ui-stopover {
 	position: relative;
 	display: flex;
 	padding: .2em 0 .2em 1.4em;
 }
-.vbb-journey-ui-stopover > * {
+.db-journey-ui-stopover > * {
 	align-self: baseline;
 }
 
-.vbb-journey-ui-stopover::before {
+.db-journey-ui-stopover::before {
 	position: absolute;
 	content: ' ';
 	width: .5em;
@@ -40,32 +40,32 @@
 	background-color: #777;
 }
 
-.vbb-journey-ui-stopover .vbb-journey-ui-name {
+.db-journey-ui-stopover .db-journey-ui-name {
 	flex-grow: 1;
 }
-.vbb-journey-ui-stopover .vbb-journey-ui-when,
-.vbb-journey-ui-stopover .vbb-journey-ui-delay {
+.db-journey-ui-stopover .db-journey-ui-when,
+.db-journey-ui-stopover .db-journey-ui-delay {
 	padding-left: .25em;
 	display: inline-block;
 	font-size: 90%;
 	color: #777;
 }
-.vbb-journey-ui-stopover .vbb-journey-ui-delay {
+.db-journey-ui-stopover .db-journey-ui-delay {
 	padding-left: .05em;
 }
 
-.vbb-journey-ui-leg {
+.db-journey-ui-leg {
 	position: relative;
 	margin-left: .5em;
 	padding: .2em 0 .2em 1.7em;
 	border-left: .4em solid #999;
 	font-size: 90%;
 }
-.vbb-journey-ui-leg.vbb-journey-ui-walking {
+.db-journey-ui-leg.db-journey-ui-walking {
 	border-left-style: dotted;
 }
 
-.vbb-journey-ui-leg .vbb-journey-ui-line-container {
+.db-journey-ui-leg .db-journey-ui-line-container {
 	position: absolute;
 	top: .9em;
 	left: 0;
@@ -74,7 +74,7 @@
 	text-align: center;
 	z-index: 1;
 }
-.vbb-journey-ui-leg .vbb-journey-ui-line {
+.db-journey-ui-leg .db-journey-ui-line {
 	display: inline-block;
 	padding: .15em .2em;
 	line-height: 1;
@@ -84,52 +84,52 @@
 	color: #fff;
 }
 
-.vbb-journey-ui-leg .vbb-journey-ui-product {
+.db-journey-ui-leg .db-journey-ui-product {
 	display: inline-block;
 	width: 1.9ex;
 	height: 1.9ex;
 	vertical-align: middle;
 }
-.vbb-journey-ui-leg .vbb-journey-ui-product {
+.db-journey-ui-leg .db-journey-ui-product {
 	display: inline-block;
 	width: 2.2ex;
 	height: 2.2ex;
 	vertical-align: middle;
 }
 
-.vbb-journey-ui-leg .vbb-journey-ui-direction {
+.db-journey-ui-leg .db-journey-ui-direction {
 	vertical-align: middle;
 }
 
-.vbb-journey-ui-leg .vbb-journey-ui-details {
+.db-journey-ui-leg .db-journey-ui-details {
 	padding: .2em 0;
 	display: block;
 	list-style: none;
 	color: #777;
 }
-.vbb-journey-ui-leg .vbb-journey-ui-details:first-child {
+.db-journey-ui-leg .db-journey-ui-details:first-child {
 	padding-top: 0;
 }
-.vbb-journey-ui-leg .vbb-journey-ui-details:last-child {
+.db-journey-ui-leg .db-journey-ui-details:last-child {
 	padding-bottom: 0;
 }
 
-.vbb-journey-ui-leg .vbb-journey-ui-transfer-position {
+.db-journey-ui-leg .db-journey-ui-transfer-position {
 	display: block;
 	line-height: 1;
 }
-.vbb-journey-ui-leg .vbb-journey-ui-transfer-position svg {
+.db-journey-ui-leg .db-journey-ui-transfer-position svg {
 	margin: .1em 0 0 0;
 	width: 100%;
 	max-height: 2.2em;
 }
 
-.vbb-journey-ui-leg .vbb-journey-ui-details .vbb-journey-ui-stopover {
+.db-journey-ui-leg .db-journey-ui-details .db-journey-ui-stopover {
 	position: relative;
 	margin-left: -.25em;
 	border-bottom-color: #999;
 }
-.vbb-journey-ui-leg .vbb-journey-ui-details .vbb-journey-ui-stopover::before {
+.db-journey-ui-leg .db-journey-ui-details .db-journey-ui-stopover::before {
 	content: '';
 	position: absolute;
 	display: block;
